--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,7 @@
    "source": [
     "import folium\n",
     "buenos_map = folium.Map([ba_latitude, ba_longitude])\n",
-    "buenos_map"
+    "buenos_map  f"
    ]
   },
   {
