Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,7 @@
     }
    ],
    "source": [
-    "evmap = folium.Map([-34.6037,-58.3816])\n",
+    "evmap = folium.Map([100,100])\n",
     "evmap"
    ]
   },
