Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -316,7 +316,8 @@
    ],
    "source": [
     "evmap = folium.Map([30,120])\n",
-    "evmap"
+    "evmap\n",
+    "evmarker = folium.Marker"
    ]
   },
   {
