Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -317,7 +317,8 @@
    "source": [
     "evmap = folium.Map([30,120])\n",
     "evmap\n",
-    "evmarker = folium.Marker"
+    "evmarker = folium.Marker([30,120])\n",
+    "evmarker"
    ]
   },
   {
