Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -315,7 +315,8 @@
     "evmap = folium.Map([30,120])\n",
     "evmap\n",
     "evmarker = folium.Marker([30,120])\n",
-    "evmarker"
+    "evmarker\n",
+    "evmarker.add_to"
    ]
   },
   {
