--- a/index.ipynb
+++ b/index.ipynb
@@ -297,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fc0a3bd8f28>"
+       "<folium.map.Marker at 0x7fc0a3b6a2b0>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
     "evmap\n",
     "evmarker = folium.Marker([30,120])\n",
     "evmarker\n",
-    "evmarker.add_to"
+    "evmarker.add_to(evmap)"
    ]
   },
   {
