--- a/index.ipynb
+++ b/index.ipynb
@@ -297,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fc0a3b6a2b0>"
+       "<folium.map.Marker at 0x7fc0a3b6a6d8>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
