Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -316,7 +316,7 @@
     "evmap\n",
     "evmarker = folium.Marker([30,120])\n",
     "evmarker\n",
-    "evmarker.add_to(evmap)"
+    "evmarker.add_to(evmap)  buenos_marker.add_to(buenos_map)"
    ]
   },
   {
