--- a/index.ipynb
+++ b/index.ipynb
@@ -297,16 +297,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<folium.map.Marker at 0x7fc0a3b6aac8>"
+       "<folium.map.Marker at 0x7fc0a3b6ad30>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,8 @@
     "evmap = folium.Map([30,120])\n",
     "evmap\n",
     "evmarker = folium.Marker([30,120])\n",
-    "evmarker\n"
+    "evmarker\n",
+    "evmarker.add_to(evmap)"
    ]
   },
   {
