--- a/index.ipynb
+++ b/index.ipynb
@@ -435,7 +435,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = "
+    "la_boca_marker = neighborhood_mar"
    ]
   },
   {
