--- a/index.ipynb
+++ b/index.ipynb
@@ -431,11 +431,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "la_boca_marker = neighborhood_mar"
+    "la_boca_marker = neighborhood_markers[-1]"
    ]
   },
   {
