Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -339,7 +339,7 @@
     }
    ],
    "source": [
-    "evmap = folium.Map([30,120])\n",
+    "evmap = folium.Map([30,120],zoom_start = )\n",
     "evmap"
    ]
   },
