Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -340,7 +340,7 @@
    ],
    "source": [
     "evmap = folium.Map([30,120],zoom_start = 10)\n",
-    "evmarker\n",
+    "evmarker = folium>a\n",
     "evmap"
    ]
   },
