Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -341,7 +341,7 @@
    "source": [
     "evmap = folium.Map([30,120],zoom_start = 10)\n",
     "evmarker = folium>Marker([30,120])\n",
-    "evmarker.add\n",
+    "evmarker.add_to(evmap)\n",
     "evmap"
    ]
   },
